tests/snapshots/formatter__air_binary_expression_subset_formatted.snap
---
source: tests/formatter.rs
assertion_line: 183
expression: formatted
---
1 + 2 + 3 + 4
1 + 2 ^ 3 + 4
1 ~ 2
1 < 2
1 <= 2
1 > 2
1 >= 2
1 == 2
1 != 2
