tests/snapshots/formatter__call_leading_holes_formatted.snap
---
source: tests/formatter.rs
assertion_line: 250
expression: formatted
---
# Leading holes
fn(, x = 1)

fn(, x = 1)

fn(, x = 1)

fn(,, x = 1)

fn(
  # comment
  ,
  x = 1
)

fn(
  ,
  # comment
  ,
  x = 1
)
