tests/snapshots/formatter__call_leading_holes_hugging_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
fn(
  ,
  ,
  paste0(
    "This is a section",
    and,
    "this is another section",
    "and this is a final section"
  )
)
